--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="./assets/styles/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="./src/assets/styles/style.css">
 </head>
 <body>
     <div class="container">
@@ -28,6 +25,6 @@
         </div>
     </div>
     
-    <script src="./js/game_logic.js"></script>
+    <script src="./src/js/game_logic.js"></script>
 </body>
 </html>
